# tasty-tap

./: .gitignore  .travis.yml  README.md  changelog.md  stack.yaml  tasty-tap.cabal
src/Test/Tasty/Runners/: TAP.hs
test/: Main.hs
test/golden/: simple.tap  simple.txt
