name:                tasty-tap
version:             0.0.1
synopsis:            TAP (Test Anything Protocol) formatter for tasty
-- description:
license:             MIT
license-file:        LICENSE
author:              Michael Xavier
maintainer:          michael@michaelxavier.net
copyright:           (C) 2015 Michael Xavier
category:            Testing
build-type:          Simple
cabal-version:       >=1.10
tested-with:   GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.1
extra-source-files:
  README.md
  changelog.md

flag lib-Werror
  default: False
  manual: True

library
  exposed-modules:     Test.Tasty.Runners.TAP
  build-depends:       base >=4.8 && <4.9
                     , tasty >= 0.10 && < 0.11
                     , stm
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall


test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:     test
  default-language:   Haskell2010

  build-depends:    base
                  , tasty
                  , tasty-tap
                  , tasty-hunit

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall
